แก้ไข ปิดแจ้งเตือน

--- a/views/health_promoting_hospital_view.xml
+++ b/views/health_promoting_hospital_view.xml
@@ -19,6 +19,7 @@
                         <group>
                             <field name="name"/>
                             <field name="flex"/>
+                            <field name="image"/>
                         </group>
                     </sheet>
                 </form>
